--- a/Food Drlivery/Food Drlivery/Base.lproj/Main.storyboard
+++ b/Food Drlivery/Food Drlivery/Base.lproj/Main.storyboard
@@ -18,9 +18,145 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <connections>
+                        <segue destination="bl6-Sg-myE" kind="show" identifier="orderingSegue" id="jzE-9v-zuY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="105" y="-83"/>
+        </scene>
+        <!--Meals View Controller - Ястия-->
+        <scene sceneID="rju-Uy-4db">
+            <objects>
+                <viewController title="Ястия" id="GPn-rf-2mP" customClass="MealsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TkX-wv-Bcr"/>
+                        <viewControllerLayoutGuide type="bottom" id="VA4-zs-bMJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XnK-ly-DrB">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="95" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="zWU-tH-1JN">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Ястия" id="ZAA-CH-JFX"/>
+                    <connections>
+                        <outlet property="mealsTableView" destination="zWU-tH-1JN" id="oWj-xU-tnf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yzD-cr-Zaw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2073" y="-625"/>
+        </scene>
+        <!--Navigation Controller - Ястия-->
+        <scene sceneID="sWU-3D-c2u">
+            <objects>
+                <navigationController id="mmZ-kW-ooK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Ястия" image="meal.png" id="0Us-HF-qca"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fbM-ob-o82">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="GPn-rf-2mP" kind="relationship" relationship="rootViewController" id="pY1-0L-EXk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AyR-gJ-v5F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1379" y="-609"/>
+        </scene>
+        <!--View Controller - Поръчка-->
+        <scene sceneID="bD2-lp-ulK">
+            <objects>
+                <viewController id="odz-F3-ekg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="q9k-iR-JCg"/>
+                        <viewControllerLayoutGuide type="bottom" id="aL2-dh-XgA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mJQ-lO-PLJ">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Поръчка" image="order.png" selectedImage="order.png" id="plr-Uy-yjS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sng-wo-xyB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1379" y="59"/>
+        </scene>
+        <!--View Controller - new-->
+        <scene sceneID="WAz-eb-Q9A">
+            <objects>
+                <viewController title="new" id="5Xt-Uk-Vby" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gNR-ex-78q"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bxb-DT-0kg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="b7M-u7-y7m">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="new" id="pHP-N7-ZxT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MuC-3q-oN9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1379" y="1118"/>
+        </scene>
+        <!--View Controller - Profile-->
+        <scene sceneID="BDS-8F-zKF">
+            <objects>
+                <viewController title="Profile" id="10o-wq-ntc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2xa-mE-zlI"/>
+                        <viewControllerLayoutGuide type="bottom" id="bd1-ge-UsI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XcF-BQ-C3v">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Профил" image="profile.png" id="Fmc-Uu-AH6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mAC-VT-0OH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1386" y="582"/>
+        </scene>
+        <!--Main Tab Bar View Controller-->
+        <scene sceneID="jJy-19-NSo">
+            <objects>
+                <tabBarController id="bl6-Sg-myE" customClass="MainTabBarViewController" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="5ua-Qt-o7p">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mmZ-kW-ooK" kind="relationship" relationship="viewControllers" id="7Ah-3P-ZNJ"/>
+                        <segue destination="odz-F3-ekg" kind="relationship" relationship="viewControllers" id="WYi-3u-jD1"/>
+                        <segue destination="10o-wq-ntc" kind="relationship" relationship="viewControllers" id="ofc-wi-WOW"/>
+                        <segue destination="5Xt-Uk-Vby" kind="relationship" relationship="viewControllers" id="dLR-3f-4XZ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mt7-fi-7hG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="721" y="-83"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="meal.png" width="30" height="29"/>
+        <image name="order.png" width="30" height="30"/>
+        <image name="profile.png" width="24" height="30"/>
+    </resources>
 </document>
