--- a/Food Drlivery/Food Drlivery/Views/MealTableViewCell.xib
+++ b/Food Drlivery/Food Drlivery/Views/MealTableViewCell.xib
@@ -7,29 +7,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="MealTableViewCellController">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+        <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="11" rowHeight="90" id="KGk-i7-Jjw" customClass="MealTableViewCellController">
+            <rect key="frame" x="0.0" y="0.0" width="306" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Qv-dL-2jb">
-                        <rect key="frame" x="7" y="6" width="78" height="78"/>
+                        <rect key="frame" x="7" y="5" width="79" height="79"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="2Qv-dL-2jb" secondAttribute="height" multiplier="1:1" id="Xo2-Wf-J9X"/>
+                            <constraint firstAttribute="width" secondItem="2Qv-dL-2jb" secondAttribute="height" multiplier="1:1" id="nsc-6I-4Xl"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal description" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="227" translatesAutoresizingMaskIntoConstraints="NO" id="B6Z-e5-L6Z">
-                        <rect key="frame" x="93" y="40" width="227" height="53"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal description" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="179" translatesAutoresizingMaskIntoConstraints="NO" id="B6Z-e5-L6Z">
+                        <rect key="frame" x="94" y="44" width="179" height="45"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5iv-RR-ir7">
-                        <rect key="frame" x="93" y="0.0" width="227" height="30"/>
+                        <rect key="frame" x="94" y="6" width="179" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="cf8-PO-Cyz"/>
+                            <constraint firstAttribute="height" constant="30" id="ntU-t4-oPa"/>
                         </constraints>
                         <attributedString key="attributedText">
                             <fragment content="Meal title">
@@ -44,16 +44,16 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="B6Z-e5-L6Z" secondAttribute="bottom" constant="-4" id="7Sc-ZG-I65"/>
-                    <constraint firstItem="2Qv-dL-2jb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="Bsb-EO-21R"/>
-                    <constraint firstAttribute="bottom" secondItem="2Qv-dL-2jb" secondAttribute="bottom" constant="5" id="GwR-jI-tNJ"/>
-                    <constraint firstAttribute="trailing" secondItem="5iv-RR-ir7" secondAttribute="trailing" id="LJ1-eO-X4V"/>
-                    <constraint firstItem="5iv-RR-ir7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="MUp-tD-sct"/>
-                    <constraint firstItem="2Qv-dL-2jb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="OjF-sg-W8w"/>
-                    <constraint firstItem="B6Z-e5-L6Z" firstAttribute="trailing" secondItem="5iv-RR-ir7" secondAttribute="trailing" id="TeH-Yy-MHG"/>
-                    <constraint firstItem="B6Z-e5-L6Z" firstAttribute="leading" secondItem="2Qv-dL-2jb" secondAttribute="trailing" constant="8" symbolic="YES" id="oeL-1x-hwz"/>
-                    <constraint firstItem="5iv-RR-ir7" firstAttribute="leading" secondItem="2Qv-dL-2jb" secondAttribute="trailing" constant="8" symbolic="YES" id="pm0-8f-HRL"/>
-                    <constraint firstItem="B6Z-e5-L6Z" firstAttribute="top" secondItem="5iv-RR-ir7" secondAttribute="bottom" constant="10" id="yBF-Ut-nhV"/>
+                    <constraint firstItem="2Qv-dL-2jb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BDh-pE-Tq5"/>
+                    <constraint firstItem="B6Z-e5-L6Z" firstAttribute="top" secondItem="5iv-RR-ir7" secondAttribute="bottom" constant="8" symbolic="YES" id="Lyt-OL-Bd7"/>
+                    <constraint firstItem="5iv-RR-ir7" firstAttribute="leading" secondItem="2Qv-dL-2jb" secondAttribute="trailing" constant="8" symbolic="YES" id="R6Q-DC-Kei"/>
+                    <constraint firstAttribute="bottom" secondItem="B6Z-e5-L6Z" secondAttribute="bottom" id="URV-ui-x9X"/>
+                    <constraint firstItem="5iv-RR-ir7" firstAttribute="trailing" secondItem="B6Z-e5-L6Z" secondAttribute="trailing" id="Vuq-mh-39z"/>
+                    <constraint firstItem="5iv-RR-ir7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="cVX-Bw-DLu"/>
+                    <constraint firstItem="B6Z-e5-L6Z" firstAttribute="leading" secondItem="2Qv-dL-2jb" secondAttribute="trailing" constant="8" symbolic="YES" id="nZD-ub-6Ck"/>
+                    <constraint firstItem="2Qv-dL-2jb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="qoq-ip-RJD"/>
+                    <constraint firstItem="2Qv-dL-2jb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="vuY-ON-i0y"/>
+                    <constraint firstAttribute="trailing" secondItem="B6Z-e5-L6Z" secondAttribute="trailing" id="xRp-fM-mRf"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -61,7 +61,7 @@
                 <outlet property="mealTitle" destination="5iv-RR-ir7" id="wK2-TS-OUd"/>
                 <outlet property="mealTypes" destination="B6Z-e5-L6Z" id="V1B-9c-OhE"/>
             </connections>
-            <point key="canvasLocation" x="431" y="317"/>
+            <point key="canvasLocation" x="424" y="307"/>
         </tableViewCell>
     </objects>
 </document>
