profile photo fetching fixed

--- a/Food Drlivery/Food Drlivery/Base.lproj/Main.storyboard
+++ b/Food Drlivery/Food Drlivery/Base.lproj/Main.storyboard
@@ -386,6 +386,7 @@
                             <constraint firstItem="f2t-el-ySH" firstAttribute="top" secondItem="k1y-qg-5g0" secondAttribute="bottom" constant="8" id="jyB-cV-TIz"/>
                             <constraint firstItem="aks-7r-nGU" firstAttribute="leading" secondItem="b7M-u7-y7m" secondAttribute="leadingMargin" id="kjq-8G-kmG"/>
                             <constraint firstItem="f2t-el-ySH" firstAttribute="leading" secondItem="b7M-u7-y7m" secondAttribute="leadingMargin" id="mAg-Ei-P23"/>
+                            <constraint firstItem="uzu-L9-d6y" firstAttribute="leading" secondItem="b7M-u7-y7m" secondAttribute="leadingMargin" id="oQn-mh-bAb"/>
                             <constraint firstItem="hFE-5h-1rz" firstAttribute="centerY" secondItem="f2t-el-ySH" secondAttribute="centerY" id="rbW-Jl-grR"/>
                             <constraint firstItem="k1y-qg-5g0" firstAttribute="leading" secondItem="b7M-u7-y7m" secondAttribute="leadingMargin" id="uSZ-q5-Hie"/>
                             <constraint firstItem="aks-7r-nGU" firstAttribute="trailing" secondItem="b7M-u7-y7m" secondAttribute="trailingMargin" id="vaE-Re-PpA"/>
@@ -442,7 +443,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K1H-u7-FXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1379" y="59"/>
+            <point key="canvasLocation" x="1405" y="135"/>
         </scene>
     </scenes>
     <resources>
